<resources>
    <string name="app_name">Ailog</string>
    <string name="login">Welcome Back!</string>
    <string name="email_input_message">Email</string>
    <string name="password_input_message">Password</string>
    <string name="register">Register</string>
    <string name="register_button">Register</string>
    <string name="submit_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_text">Register Now</string>
    <string name="account">Don’t have an account?</string>
    <string name="repeat_password_input_message">Ulangi Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeUser">Hello, Guest!</string>
    <string name="notifications">Logo Notifications</string>
    <string name="snap_news">Snap News</string>
    <string name="generate">Generate</string>
    <string name="summary_ai">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel arcu non massa tincidunt feugia</string>
    <string name="recommendation">Recommendation</string>
    <string name="author">BBC News</string>
    <string name="news_date">15 Minutes Ago</string>
    <string name="news_title">How many Real Madrid games will injured Thibaut Courtois miss?</string>
    <string name="views_count">152k</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="bookmark_menu">Bookmark</string>
    <string name="profile_menu">Profile</string>
    <string name="username_profile">John Thor</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="blog">Your Blog</string>
    <string name="create_blog">Create Blog</string>
    <string name="save">Save</string>
    <string name="preview_camera">Preview</string>
    <string name="name_input_message">Name</string>
    <string name="username_input_message">Username</string>
    <string name="phone_input_message">No. Hp</string>
    <string name="bio_input_message">Bio</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="international_politics">International Politics</string>
    <string name="finance">Finance</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="back">back</string>
    <string name="bookmark">Bookmark</string>
    <string name="_3_news">5 News</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="privacy_center">Privacy Center</string>
    <string name="log_out">Log out</string>
    <string name="notification">Notifications</string>
    <string name="redeem_point">Redeem Point</string>
    <string name="help">Help</string>
    <string name="title_content">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
    </string>
    <string name="title_news_content">How many Real Madrid games will injured Thibaut Courtois miss?</string>
    <string name="identity_news">John Smith • Dec 27, 2024 • Health</string>
    <string name="share">share</string>
    <string name="lorem_ipsum_mauris_ac_elit_porttitor">lorem ipsum Mauris ac elit porttitor</string>
    <string name="login_hint"><![CDATA[Enter Your Email & Password!]]></string>
    <string name="default_web_client_id">1032758132187-eeldcj3pgllchj40gu6nh247t40pjumd.apps.googleusercontent.com</string>
    <string name="data_location_privacy"><b>Data Lokasi:</b> Aplikasi ini dapat mengumpulkan data lokasi Anda untuk meningkatkan akurasi fitur-fitur seperti rekomendasi lokal, navigasi, dan lainnya. Data lokasi yang dikumpulkan dapat mencakup lokasi waktu nyata atau lokasi perkiraan, bergantung pada izin yang Anda berikan. Kami menggunakan data ini hanya untuk keperluan aplikasi dan tidak membagikannya kepada pihak ketiga tanpa persetujuan Anda.</string>
    <string name="information_user"><b>Informasi Pribadi:</b> Aplikasi ini dapat mengumpulkan informasi pribadi Anda, seperti nama, alamat email, dan nomor telepon, untuk memungkinkan fitur-fitur tertentu dan meningkatkan layanan kami. Informasi ini dikumpulkan hanya jika Anda memberikannya secara sukarela, misalnya, saat mendaftar atau mengisi formulir kontak. Kami berkomitmen untuk menjaga kerahasiaan data ini dan tidak akan membagikannya kepada pihak ketiga tanpa persetujuan Anda.</string>
    <string name="app_desc"><b>Ailog</b> merupakan aplikasi blog yang dapat diakses oleh semua pengguna dan kalangan umur, seperti pada blog pada umumnya pengguna dapat mengupload artikel dan mendapat hadiah berdasarkan engagement yang didapat pengguna melalui artikel baik itu views maupun like, dengan fitur unggulan berupa kecerdasan buatan (AI) yang mampu menghasilkan ringkasan dari berbagai artikel blog. Aplikasi ini memungkinkan pengguna/user untuk menjelajahiartikel blog berdasarkan kategori, termasuk blog trending dan topik lainnya, sehingga mereka dapat dengan cepat mendapatkan kesimpulan dari artikelnya tanpa harus membaca keseluruhan artikel. Dengan fitur ringkasan ini, pengguna dapat menghemat waktu dan mendapatkan informasi yang relevan secara efisien, menjadikan pengalaman membaca lebih menyenangkan dan informatif.</string>
    <string name="dev_name">Ailog Developer Team</string>
    <string name="from_gallery">From Gallery</string>
    <string name="help_info"><![CDATA[Help & Info]]></string>
    <string-array name="categories">
        <item>Technology</item>
        <item>Business</item>
        <item>Sports</item>
        <item>Entertainment</item>
        <!-- Tambahkan kategori lainnya sesuai kebutuhan -->
    </string-array>
</resources>