<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".auth.Register"
    android:id="@+id/register"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/add_coffee_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="35dp"
        android:text="@string/register" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="email"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_input_message"
        android:inputType="textEmailAddress"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_input_message"
        android:layout_marginHorizontal="36dp"
        android:inputType="textPassword"/>

    <!-- Repeat Password EditText -->
    <EditText
        android:id="@+id/repeat_password_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/repeat_password_input_message"
        android:layout_marginHorizontal="36dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/register_button"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary_button"
        android:elevation="12dp"
        android:translationZ="4dp"/>
</LinearLayout>
