<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/add_coffee_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginStart="46dp"
                android:layout_marginBottom="35dp"
                android:text="@string/login" />

            <!-- Email EditText -->
            <EditText
                android:id="@+id/email_input_field"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="email"
                android:textSize="16sp"
                android:paddingHorizontal="24dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email_input_message"
                android:inputType="textEmailAddress"/>

            <!-- Password EditText -->
            <EditText
                android:id="@+id/password_input_field"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:paddingHorizontal="24dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password_input_message"
                android:layout_marginHorizontal="36dp"
                android:inputType="textPassword"/>

            <!-- Forgot password TextView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="40dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginBottom="24dp"
                app:cardElevation="12dp"
                android:backgroundTint="@color/primary_button"
                app:cardCornerRadius="25dp">
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:backgroundTint="@color/primary_button"
                android:text="@string/submit_button"
               />
        </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/account"/>
        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/register_text"/>
    </LinearLayout>
</LinearLayout>
