<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="36dp"
    android:orientation="vertical"
    tools:context=".profile.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        android:elevation="4dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_menu"
            android:src="@drawable/profile_photo"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/dark_blue"
        android:text="@string/edit_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="@string/name_input_message" />

    <EditText
        android:id="@+id/name_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="name"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/name_input_message"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/username_input_message"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username_input_message"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789._-"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/email_input_message"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="email"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_input_message"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/phone_input_message"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phone_input_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="phoneNumber"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/phone_input_message"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/bio_input_message"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/bio_input_field"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="bio"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/bio_input_message"
        android:inputType="textMultiLine"
        android:maxLines="3"/>

</LinearLayout>
