<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="36dp"
    android:orientation="vertical"
    tools:context=".profile.EditProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textSize="28sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/saveButtonProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:text="@string/save"/>
    </LinearLayout>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="48dp"
        android:textStyle="bold"
        android:text="@string/preview_camera"/>
    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:layout_height="150dp" />


</LinearLayout>