<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="36dp"
    android:orientation="vertical"
    android:layout_marginBottom="72dp"
    tools:context=".News">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_marginTop="36dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/back"
                    android:src="@drawable/back_button" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="12dp"
                    android:contentDescription="@string/bookmark"
                    android:src="@drawable/bookmark_icon" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/share"
                    android:src="@drawable/share_icon" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/politics_image"/>

            <TextView
                android:id="@+id/newsTitle"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/title_news_content"/>

            <TextView
                android:id="@+id/newsMetadata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#666666"
                android:textSize="14sp"
                android:text="@string/identity_news"/>

            <TextView
                android:id="@+id/newsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingMultiplier="1.5"
                android:textColor="#333333"
                android:textSize="12sp"
                android:text="@string/title_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Komentar"
                android:layout_marginTop="18dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <!-- Comment Input -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/edit_text_background"
                android:hint="Tulis Komentar..."
                android:gravity="top"
                android:padding="12dp"
                android:textSize="14sp"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Anonymous"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1 minggu yang lalu"
                        android:textColor="#666666"
                        android:textSize="12sp"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="lorem Maecenas adipiscing ante non diam sodales "
                    android:textColor="#333333"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
